<resources>
    <string name="app_name">Coastli</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Beach Badge</string>
    <string name="title_notifications">Account</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="cardBig">Deal of the week</string>
    <string name="card1">Most popular</string>
    <string name="card2">Family friendly</string>

    <string name="card3">Best facilities</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="deal_description">Get 10% discount for 2019 summer beach badges.</string>
</resources>
