<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:background="@drawable/beach_main"
            android:scaleType="fitCenter"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@color/colorBackground"
            android:orientation="horizontal">


            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="110dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorAccent"
                card_view:cardBackgroundColor="@color/colorPrimaryDark"
                card_view:cardCornerRadius="4dp"
                card_view:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:layout_editor_absoluteX="15dp">

                <TextView
                    android:id="@+id/info_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal|center"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/card1"
                    android:textColor="@color/colorWhite"
                    android:visibility="visible" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view2"
                android:layout_width="110dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:background="@color/colorAccent"
                card_view:cardBackgroundColor="@color/colorPrimaryDark"
                card_view:cardCornerRadius="4dp"
                tools:layout_editor_absoluteX="125dp"
                tools:layout_editor_absoluteY="290dp">

                <TextView
                    android:id="@+id/info_text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal|center"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/card2"
                    android:textColor="@color/colorWhite"
                    android:visibility="visible" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view3"
                android:layout_width="110dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorAccent"
                card_view:cardBackgroundColor="@color/colorPrimaryDark"
                card_view:cardCornerRadius="4dp"
                card_view:layout_constraintTop_toBottomOf="@+id/QRcodeView"
                tools:layout_editor_absoluteX="259dp">

                <TextView
                    android:id="@+id/info_text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal|center"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/card3"
                    android:textColor="@color/colorWhite"
                    android:visibility="visible" />
            </android.support.v7.widget.CardView>


            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_home"
                android:visibility="invisible" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_viewBig"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:background="@color/colorAccent"
                card_view:cardBackgroundColor="@color/colorPrimaryDark"
                card_view:cardCornerRadius="4dp"
                tools:layout_editor_absoluteX="15dp"
                tools:layout_editor_absoluteY="15dp">

                <TextView
                    android:id="@+id/info_textBig"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="top"
                    android:padding="8dp"
                    android:text="@string/cardBig"
                    android:textColor="@color/colorWhite"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/deal_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:background="@color/colorWhite"
                    android:gravity="top"
                    android:padding="8dp"
                    android:text="@string/deal_description"
                    android:textColorLink="@color/common_google_signin_btn_text_dark_focused"
                    android:textStyle="bold"
                    android:visibility="visible" />
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </LinearLayout>


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation">


    </android.support.design.widget.BottomNavigationView>


    <ImageView
        android:id="@+id/QRcodeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:srcCompat="@android:color/holo_orange_dark"
        tools:layout_editor_absoluteX="172dp"
        tools:layout_editor_absoluteY="207dp" />

</android.support.constraint.ConstraintLayout>